--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,3 +1,3 @@
-<p>
-  cards works!
-</p>
+<div id="cards" *ngIf="cards">
+    <app-card *ngFor="let card of cards" [card]="card"></app-card>
+</div>
