--- a/src/app/cards/components/card/card.component.scss
+++ b/src/app/cards/components/card/card.component.scss
@@ -16,6 +16,7 @@
             padding: 5px 10px;
             color: #ffffff;
             cursor: pointer;
+            font-family: 'Montserrat', sans-serif;
         }
 
         #view {
