--- a/src/app/cards/cards.component.scss
+++ b/src/app/cards/cards.component.scss
@@ -5,4 +5,16 @@
     justify-content: center;
     height: 100vh;
     text-align: center;
+
+    #card-create-button {
+        background-color: #f5f2f2;
+        border-radius: 5px;
+        padding: 15px;
+        width: 200px;
+        margin: 10px;
+        border: 1px solid #e6e6e6;
+        font-weight: bold;
+        font-family: 'Montserrat', sans-serif;
+        cursor: pointer;
+    }
 }
