--- a/src/app/cards/components/card/card.component.html
+++ b/src/app/cards/components/card/card.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="card-actions">
-    <button id="view" [routerLink]="detail/1">View</button>
+    <button id="view" routerLink="detail/{{card.id}}">View</button>
     <button id="remove" (click)="removeCard(card)">Remove</button>
   </div>
 </div>
