--- a/src/app/cards/card-detail/card-detail.component.html
+++ b/src/app/cards/card-detail/card-detail.component.html
@@ -1,3 +1,4 @@
 <div id="card-detail">
-
+    <button routerLink="/cards" id="back-button">Back</button>
+    <app-card [card]="card" [showActions]="false"></app-card>
 </div>
