--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -4,7 +4,10 @@
 </div>
 
 <ng-template #allCards>
-    <app-card *ngFor="let card of cards" [card]="card" (removeCard)="removeCard($event)"></app-card>
+    <app-card *ngFor="let card of cards"
+     [card]="card" 
+     (removeCard)="removeCard($event)">
+    </app-card>
 </ng-template>
 
 <ng-template #noCardsMessage>
